Improvements to main.html and styles.css

--- a/test/test-ui/main.html
+++ b/test/test-ui/main.html
@@ -29,7 +29,25 @@
     <!-- Landing Page Content -->
     <div class="landing-page">
         <h1>Never waste another second creating stunning documents</h1>
-        <p>Writing and rewriting content is tough, making it look professional is even tougher. With ScriptaGen, beautiful, professional-looking documents are just a <em>click away</em></p>
+        <p>Writing and rewriting content is tough, making it look professional is even tougher. With ScriptaGen, beautiful, professional-looking documents are just a <em>click away</em>.</p>
+    </div>
+
+    <!-- New Instruction Section -->
+    <div class="instructions-section">
+        <div class="instructions-container">
+            <div class="instruction-step">
+                <span class="step-number">01</span>
+                <span class="step-text">Select the document type and format you want.</span>
+            </div>
+            <div class="instruction-step">
+                <span class="step-number">02</span>
+                <span class="step-text">Upload files containing the information you want to use.</span>
+            </div>
+            <div class="instruction-step">
+                <span class="step-number">03</span>
+                <span class="step-text">Select "Generate" and download your document!</span>
+            </div>
+        </div>
     </div>
 
     <!-- Main Content Area for File Upload and Options -->
