Improved main.html and styles.css

--- a/test/test-ui/main.html
+++ b/test/test-ui/main.html
@@ -9,9 +9,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css"> <!-- Custom styles -->
 
-    <!-- Google Fonts: EB Garamond -->
-    <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital@1&display=swap" rel="stylesheet">
-
     <!-- FilePond CSS for file upload functionality -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/FilePond/4.28.2/filepond.min.css" rel="stylesheet">
 </head>
@@ -41,13 +38,22 @@
     <!-- New Instruction Section -->
     <div class="instructions-section">
         <div class="instructions-container">
+            <!-- How it works Section -->
+            <h2>How it works</h2>
+            <p>ScriptaGen uses <span class="eb-garamond">artificial intelligence</span> to read, understand the content of your files, reorganise the information for the document you want to generate, and apply your desired style.<br><br>
+            Using <span class="eb-garamond">artificial intelligence</span> allows it to understand the meaning behind the text written, images, data files, and audio files</p>
+
+            <!-- Instructions Heading -->
+            <h2>Instructions</h2>
+
+            <!-- Instruction Steps -->
             <div class="instruction-step">
                 <span class="step-number">01</span>
                 <span class="step-text">Select the document that you want to create. It can be a resume, a report, a spreadsheet table, meeting notes, and even a brand design guideline!</span>
             </div>
             <div class="instruction-step">
                 <span class="step-number">02</span>
-                <span class="step-text">Choose your favorite format among the multiple desings availables</span>
+                <span class="step-text">Choose your favorite format among the multiple designs available.</span>
             </div>
             <div class="instruction-step">
                 <span class="step-number">03</span>
