Fixed landing page button

--- a/main.html
+++ b/main.html
@@ -26,8 +26,8 @@
 
     <!-- Landing Page Content -->
     <div class="landing-page">
-        <h1>Never waste another second creating <span class="stunning">stunning</span> documents</h1>
-        <p>Writing and rewriting content is tough, making it look professional is even tougher. With ScriptaGen, <span class="eb-garamond">beautiful</span>, <span class="eb-garamond">professional-looking</span> documents are just a click away</p>
+        <h1>Never waste another second creating stunning documents</h1>
+        <p>Writing and rewriting content is tough, making it look professional is even tougher. With ScriptaGen, beautiful, professional-looking documents are just a click away</p>
         
         <!-- Start Now Button -->
         <div class="start-button-container">
@@ -40,8 +40,8 @@
         <div class="instructions-container">
             <!-- How it works Section -->
             <h2>How it works</h2>
-            <p>ScriptaGen uses <span class="eb-garamond">artificial intelligence</span> to read, understand the content of your files, reorganise the information for the document you want to generate, and apply your desired style.<br><br>
-            Using <span class="eb-garamond">artificial intelligence</span> allows it to understand the meaning behind the text written, images, data files, and audio files</p>
+            <p>ScriptaGen uses artificial intelligence to read, understand the content of your files, reorganise the information for the document you want to generate, and apply your desired style.<br><br>
+            Using artificial intelligence allows it to understand the meaning behind the text written, images, data files, and audio files</p>
 
             <!-- Instructions Heading -->
             <h2>Instructions</h2>
@@ -67,25 +67,25 @@
     </div>
 
     <!-- Main Content Area for File Upload and Options -->
-    <div class="container mt-5">
+    <div class="container">
         <h2>Upload Your File</h2>
         
         <!-- Option Buttons -->
-        <div class="option-buttons mt-3">
+        <div class="option-buttons">
             <button type="button" class="btn btn-outline-primary">Option 1</button>
             <button type="button" class="btn btn-outline-primary">Option 2</button>
             <button type="button" class="btn btn-outline-primary">Option 3</button>
         </div>
 
         <!-- File Drop Area -->
-        <div class="file-drop-area mt-4">
+        <div class="file-drop-area">
             <input type="file" class="file-input" multiple>
             <p>Drag and drop files here, or click to select files.</p>
         </div>
 
         <!-- Action Buttons -->
-        <button type="button" class="btn btn-primary mt-4">Generate Revised File</button>
-        <button type="button" class="btn btn-success mt-2">Download Revised File</button>
+        <button type="button" class="btn btn-primary">Generate Revised File</button>
+        <button type="button" class="btn btn-success">Download Revised File</button>
     </div>
 
     <!-- Include JS Libraries -->
