Adjustments to "how-it-works" div

--- a/main.html
+++ b/main.html
@@ -35,14 +35,18 @@
         </div>
     </div>
 
-    <!-- New Instruction Section -->
-    <div class="instructions-section">
+    <!-- How it works Section -->
+    <div class="instructions-section how-it-works">
         <div class="instructions-container">
-            <!-- How it works Section -->
             <h2>How it works</h2>
             <p>ScriptaGen uses artificial intelligence to read, understand the content of your files, reorganise the information for the document you want to generate, and apply your desired style.<br><br>
-            Using artificial intelligence allows it to understand the meaning behind the text written, images, data files, and audio files</p>
+            Using artificial intelligence allows it to understand the meaning behind the text written, images, data files, and audio files.</p>
+        </div>
+    </div>
 
+    <!-- Instructions Section -->
+    <div class="instructions-section">
+        <div class="instructions-container">
             <!-- Instructions Heading -->
             <h2>Instructions</h2>
 
