Adjustments to buttons in Main Content Area for File Upload

--- a/main.html
+++ b/main.html
@@ -76,9 +76,9 @@
         
         <!-- Option Buttons -->
         <div class="option-buttons">
-            <button type="button" class="btn btn-outline-primary">Option 1</button>
-            <button type="button" class="btn btn-outline-primary">Option 2</button>
-            <button type="button" class="btn btn-outline-primary">Option 3</button>
+            <button type="button" class="btn btn-outline-primary">Resume</button>
+            <button type="button" class="btn btn-outline-primary">Letter</button>
+            <button type="button" class="btn btn-outline-primary">Report</button>
         </div>
 
         <!-- File Drop Area -->
@@ -88,8 +88,8 @@
         </div>
 
         <!-- Action Buttons -->
-        <button type="button" class="btn btn-primary">Generate Revised File</button>
-        <button type="button" class="btn btn-success">Download Revised File</button>
+        <button type="button" class="btn btn-outline-primary generate-btn">Generate Revised File</button>
+        <button type="button" class="btn btn-outline-primary download-btn">Download Revised File</button>
     </div>
 
     <!-- Include JS Libraries -->
