Initial scripts for scripts.js

--- a/main.html
+++ b/main.html
@@ -72,7 +72,7 @@
 
     <!-- Main Content Area for File Upload and Options -->
     <div class="container">
-        <h2>Upload Your File</h2>
+        <h2 class="container-heading">Upload Your File</h2> <!-- Added class for consistency -->
         
         <!-- Option Buttons -->
         <div class="option-buttons">
@@ -110,5 +110,8 @@
         // Placeholder for handling file upload and processing
         // Add server-side handling here as necessary
     </script>
+
+    <!-- Link to the new JavaScript file -->
+    <script src="scripts.js"></script> <!-- Include this for the dynamic section creation -->
 </body>
 </html>
