--- a/main.html
+++ b/main.html
@@ -6,20 +6,20 @@
     <title>ScriptaGen - File Revision Platform</title>
     
     <!-- Link to external CSS for Bootstrap and custom styles -->
-    <link rel="stylesheet" href="styles.css"> <!-- Custom styles -->
+    <link rel="stylesheet" href="styles.css">  <!-- Custom styles -->
 </head>
 <body>
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-light">
         <a class="navbar-brand" href="#">ScriptaGen</a>
         <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
-                <li class="nav-item"><a class="nav-link" href="#">FAQ</a></li>
-            </ul>
+            <div class="navbar-nav">
+                <div class="nav-item"><a class="nav-link" href="#">About Us</a></div>
+                <div class="nav-item"><a class="nav-link" href="#">FAQ</a></div>
+            </div>
         </div>
     </nav>
-
+    
     <!-- Landing Page Content -->
     <div class="landing-page">
         <h1>Never waste another second creating stunning documents</h1>
